<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@drawable/calc_background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/user_input"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:fontFamily="@font/lato_bold"
        android:gravity="end|center"
        android:textColor="@color/primary_white"
        android:textSize="48sp" />

    <TextView
        android:id="@+id/temp_result"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:layout_below="@+id/user_input"
        android:layout_marginTop="-20dp"
        android:fontFamily="@font/lato"
        android:gravity="end|center"
        android:textColor="@color/primary_white"
        android:textSize="20sp" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="6dp"
        android:layout_below="@+id/backspace_button"
        android:layout_marginTop="12dp"
        android:background="@drawable/ui_rounder" />

    <ImageButton
        android:id="@+id/backspace_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_below="@+id/temp_result"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="28dp"
        android:background="@null"
        android:contentDescription="@string/desc_backspace"
        app:srcCompat="@drawable/backspace" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/divider"
        android:layout_marginTop="18dp" >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/btn_clear"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginVertical="4dp"
                android:layout_marginHorizontal="12dp"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:padding="0dp"
                android:background="@drawable/round_button_secondary"
                android:text="@string/sym_clear"
                android:textSize="34sp"
                android:textColor="@color/warning" />

            <Button
                android:id="@+id/btn_bracket"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginVertical="4dp"
                android:layout_marginHorizontal="12dp"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:padding="0dp"
                android:background="@drawable/round_button_secondary"
                android:text="@string/sym_bracket"
                android:textSize="32sp"
                android:textColor="@color/symbol" />

            <Button
                android:id="@+id/btn_percent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginVertical="4dp"
                android:layout_marginHorizontal="12dp"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:padding="0dp"
                android:background="@drawable/round_button_secondary"
                android:text="@string/sym_percent"
                android:textSize="34sp"
                android:textColor="@color/symbol" />

            <Button
                android:id="@+id/btn_div"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginVertical="4dp"
                android:layout_marginHorizontal="12dp"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:padding="0dp"
                android:background="@drawable/round_button_secondary"
                android:text="@string/sym_div"
                android:textSize="34sp"
                android:textColor="@color/symbol" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <Button
                android:id="@+id/btn_7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginVertical="4dp"
                android:layout_marginHorizontal="12dp"
                android:background="@drawable/round_button_secondary"
                android:text="@string/num_7"
                android:textSize="28sp"
                android:textColor="@color/primary_white" />

            <Button
                android:id="@+id/btn_8"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginVertical="4dp"
                android:layout_marginHorizontal="12dp"
                android:background="@drawable/round_button_secondary"
                android:text="@string/num_8"
                android:textSize="28sp"
                android:textColor="@color/primary_white" />

            <Button
                android:id="@+id/btn_9"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginVertical="4dp"
                android:layout_marginHorizontal="12dp"
                android:background="@drawable/round_button_secondary"
                android:text="@string/num_9"
                android:textSize="28sp"
                android:textColor="@color/primary_white" />

            <Button
                android:id="@+id/btn_mul"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginVertical="4dp"
                android:layout_marginHorizontal="12dp"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:padding="0dp"
                android:background="@drawable/round_button_secondary"
                android:text="@string/sym_mul"
                android:textSize="24sp"
                android:textColor="@color/symbol" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <Button
                android:id="@+id/btn_4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginVertical="4dp"
                android:layout_marginHorizontal="12dp"
                android:background="@drawable/round_button_secondary"
                android:text="@string/num_4"
                android:textSize="28sp"
                android:textColor="@color/primary_white" />

            <Button
                android:id="@+id/btn_5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginVertical="4dp"
                android:layout_marginHorizontal="12dp"
                android:background="@drawable/round_button_secondary"
                android:text="@string/num_5"
                android:textSize="28sp"
                android:textColor="@color/primary_white" />

            <Button
                android:id="@+id/btn_6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginVertical="4dp"
                android:layout_marginHorizontal="12dp"
                android:background="@drawable/round_button_secondary"
                android:text="@string/num_6"
                android:textSize="28sp"
                android:textColor="@color/primary_white" />

            <Button
                android:id="@+id/btn_sub"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginVertical="4dp"
                android:layout_marginHorizontal="12dp"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:padding="0dp"
                android:background="@drawable/round_button_secondary"
                android:text="@string/sym_sub"
                android:textSize="24sp"
                android:textColor="@color/symbol" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <Button
                android:id="@+id/btn_1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginVertical="4dp"
                android:layout_marginHorizontal="12dp"
                android:background="@drawable/round_button_secondary"
                android:text="@string/num_1"
                android:textSize="28sp"
                android:textColor="@color/primary_white" />

            <Button
                android:id="@+id/btn_2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginVertical="4dp"
                android:layout_marginHorizontal="12dp"
                android:background="@drawable/round_button_secondary"
                android:text="@string/num_2"
                android:textSize="28sp"
                android:textColor="@color/primary_white" />

            <Button
                android:id="@+id/btn_3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginVertical="4dp"
                android:layout_marginHorizontal="12dp"
                android:background="@drawable/round_button_secondary"
                android:text="@string/num_3"
                android:textSize="28sp"
                android:textColor="@color/primary_white" />

            <Button
                android:id="@+id/btn_add"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginVertical="4dp"
                android:layout_marginHorizontal="12dp"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:padding="0dp"
                android:background="@drawable/round_button_secondary"
                android:text="@string/sym_add"
                android:textSize="28sp"
                android:textColor="@color/symbol" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <Button
                android:id="@+id/btn_plusmin"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginVertical="4dp"
                android:layout_marginHorizontal="12dp"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:padding="0dp"
                android:background="@drawable/round_button_secondary"
                android:text="@string/sym_plusmin"
                android:textSize="28sp"
                android:textColor="@color/primary_white" />

            <Button
                android:id="@+id/btn_0"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginVertical="4dp"
                android:layout_marginHorizontal="12dp"
                android:background="@drawable/round_button_secondary"
                android:text="@string/num_0"
                android:textSize="28sp"
                android:textColor="@color/primary_white" />

            <Button
                android:id="@+id/btn_dot"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginVertical="4dp"
                android:layout_marginHorizontal="12dp"
                android:background="@drawable/round_button_secondary"
                android:text="@string/sym_dot"
                android:textSize="28sp"
                android:textColor="@color/primary_white" />

            <Button
                android:id="@+id/btn_sum"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginHorizontal="12dp"
                android:layout_marginVertical="4dp"
                android:background="@null"
                android:backgroundTint="@color/primary_white"
                android:text="@string/sym_sum"
                android:textColor="@color/symbol"
                android:textSize="24sp" />

        </TableRow>

    </TableLayout>

</RelativeLayout>